Projet total/Assembleur/tests/bad/testfile-bad-section-1.ms
; a file must start with a section
add %rax %rbx %rcx